JDK 23: notes about JEPs