@@ -8,6 +8,8 @@ To run each example use: `java --enable-preview --source 23 <FileName.java>`
 * [466](https://openjdk.org/jeps/466) - Class-File API (Second Preview)
 * [469](https://openjdk.org/jeps/469) - Vector API (Eighth Incubator)
 * [473](https://openjdk.org/jeps/473) - Stream Gatherers (Second Preview)
+* [474](https://openjdk.org/jeps/474) - ZGC: Generational Mode by Default
+* [476](https://openjdk.org/jeps/476) - Module Import Declarations (Preview)
 
 ## Features
 
@@ -32,6 +34,27 @@ To run each example use: `java --enable-preview --source 23 <FileName.java>`
                     * a label `case 1.0f` is considered the same as `case 0.99999999f`, will throw a duplicate label error
 * **Stream Gatherers**
     * re-preview without change
+* **ZGC: Generational Mode by Default**
+    * switch the default mode of ZGC to use generational mode
+    * deprecate the non-generational mode to be removed in the future
+        * reduce the maintenance cost of supporting two models
+    * default mode will act like using command-line args: `-XX:+UseZGC -XX:+ZGenerational`
+    * non-generational can still be used with: `-XX:+UseZGC -XX:-ZGenerational`
+    * Generational ZSG should be a better solution for most use cases
+* **Module Import Declarations**
+    * allow import all packages exported by a module
+    * goal is simplify the learning and exploring of APIs without having to know its exactly package
+    * when importing a module, it will automatically import all its exported packages and its transitive dependencies
+    * syntax:
+        * `import module [Module Name]`
+        * `import module java.sql`
+    * ambiguous import:
+        * in case of two module exporting the same class name, we will have to import the class directly
+        * ```java
+          import module java.base;
+          import module java.sql;
+          import java.sql.Date;
+          ```
 
 ## Links
 
